# PLC-Diagnostics-Bridge

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: plc.py
backend/app/core/: config.py  exceptions.py  logger.py
backend/app/schemas/: plc.py  response.py
backend/app/services/plc/: abb.py  base.py  factory.py  fanuc.py  mitsubishi.py  rockwell.py  siemens.py
backend/app/services/plc/fxvrlib/: __init__.py  colors.py  extended_settings.py  ftp_client.py  library_constants.py  library_vars.py  logger.py  presets.py  robot_controller.py  utils.py
backend/app/services/plc/fxvrlib/config/: fxvrlib.toml
backend/app/tests/: test_plc_api.py  test_plc_manager.py  test_port_check.py
backend/app/utils/: connection_cache.py
backend/plcbridge_sdk/: __init__.py  manager.py  models.py
docs/: README.md  abb.md  fanuc.md  mitsubishi.md  rockwell.md  siemens.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: AppToolbar.vue  PlcBrandMark.vue  PlcConnectionForm.vue  PlcDataForm.vue  PlcStatusCard.vue  PlcTypeIcon.vue
frontend/src/components/__tests__/: PlcConnectionForm.spec.js
frontend/src/services/: api.js
frontend/src/stores/: plcStore.js
frontend/src/views/: DashboardView.vue
