[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plcbridge-sdk"
version = "2.0.0"
description = "Reusable multi-vendor PLC communication manager for SCADA-style Python apps."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "PLC Diagnostics Bridge" }
]
dependencies = [
  "fastapi==0.115.0",
  "httpx==0.27.0",
  "pydantic==2.9.0",
  "pydantic-settings==2.5.0",
  "pymcprotocol==0.3.0",
  "pymodbus==3.12.1",
  "pylogix==1.1.5",
  "python-dotenv==1.0.1",
  "python-snap7==2.0.0",
  "uvicorn[standard]==0.30.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "plcbridge_sdk*"]
namespaces = true

[tool.setuptools.package-data]
"app.services.plc.fxvrlib.config" = ["*.toml"]
